--- a/config-files/config_ant_PD_spinup.cfg
+++ b/config-files/config_ant_PD_spinup.cfg
@@ -288,7 +288,7 @@
   ! =========================
 
     ! General
-    choice_sliding_law_config                    = 'Zoet-Iverson'                   ! Choice of sliding law: "no_sliding", "idealised", "Coulomb", "Budd", "Weertman", "Tsai2015", "Schoof2005", "Zoet-Iverson"
+    choice_sliding_law_config                    = 'no_sliding'                   ! Choice of sliding law: "no_sliding", "idealised", "Coulomb", "Budd", "Weertman", "Tsai2015", "Schoof2005", "Zoet-Iverson"
     choice_idealised_sliding_law_config          = ''                               ! "ISMIP_HOM_C", "ISMIP_HOM_D", "ISMIP_HOM_E", "ISMIP_HOM_F"
 
     ! Parameters for different sliding laws
