modify config file for PD inversion

--- a/config-files/config_ant_PD_inversion_dHdt.cfg
+++ b/config-files/config_ant_PD_inversion_dHdt.cfg
@@ -471,8 +471,8 @@
   ! =====================================
 
     ! General
-    do_bed_roughness_nudging_config              = .FALSE.                          !           Whether or not to nudge the basal roughness
-    choice_bed_roughness_nudging_method_config   = ''                               !           Choice of bed roughness nudging method
+    do_bed_roughness_nudging_config              = .TRUE.                          !           Whether or not to nudge the basal roughness
+    choice_bed_roughness_nudging_method_config   = 'H_dHdt_flowline'                               !           Choice of bed roughness nudging method
     choice_inversion_target_geometry_config      = 'PD'                             !           Which reference geometry to use as the target geometry (can be "init" or "PD")
     bed_roughness_nudging_dt_config              = 5.0                              ! [yr]      Time step for bed roughness updates
     bed_roughness_nudging_t_start_config         = -9.9E9                           ! [yr]      Earliest model time when nudging is allowed
@@ -695,7 +695,7 @@
     choice_BMB_model_NAM_config                  = 'uniform'
     choice_BMB_model_EAS_config                  = 'uniform'
     choice_BMB_model_GRL_config                  = 'uniform'
-    choice_BMB_model_ANT_config                  = 'uniform' ! it cant be parameterised and mesh update
+    choice_BMB_model_ANT_config                  = 'parameterised' ! it cant be parameterised and mesh update
 
     ! Prescribed BMB forcing
     choice_BMB_prescribed_NAM_config             = ''
@@ -792,9 +792,9 @@
 
     ! Basic settings
     do_create_netcdf_output_config               = .TRUE.                           !     Whether or not NetCDF output files should be created at all
-    dt_output_config                             = 100.0                            !     Time step for writing output
+    dt_output_config                             = 1000.0                            !     Time step for writing output
     dt_output_restart_config                     = 1000.0                          !     Time step for writing restart output
-    dt_output_grid_config                        = 100.0                           !     Time step for writing gridded output
+    dt_output_grid_config                        = 1000.0                           !     Time step for writing gridded output
     dx_output_grid_NAM_config                    = 10E3                             ! [m] Horizontal resolution for the square grid used for output for North America
     dx_output_grid_EAS_config                    = 10E3                             ! [m] Horizontal resolution for the square grid used for output for Eurasia
     dx_output_grid_GRL_config                    = 10E3                             ! [m] Horizontal resolution for the square grid used for output for Greenland
