change BMB to inverted

--- a/config-files/config_ant_PD_inversion_dHdt.cfg
+++ b/config-files/config_ant_PD_inversion_dHdt.cfg
@@ -695,7 +695,7 @@
     choice_BMB_model_NAM_config                  = 'uniform'
     choice_BMB_model_EAS_config                  = 'uniform'
     choice_BMB_model_GRL_config                  = 'uniform'
-    choice_BMB_model_ANT_config                  = 'parameterised' ! it cant be parameterised and mesh update
+    choice_BMB_model_ANT_config                  = 'inverted' ! it cant be parameterised and mesh update
 
     ! Prescribed BMB forcing
     choice_BMB_prescribed_NAM_config             = ''
@@ -726,6 +726,10 @@
 
     ! "parameterised"
     BMB_Favier2019_gamma_config                  = 99.32E-5
+
+    ! "inverted"
+    BMB_inversion_t_start_config                 = -9.9E9                           ! [yr] Only nudge melt rates when the model time lies between t_start and t_end
+    BMB_inversion_t_end_config                   =  9.9E9                           ! [yr]
 
   ! == Lateral mass balance
   ! =======================
