add 3d-heat eq model , changing to semi-implicit

--- a/config-files/config_ant_matrix.cfg
+++ b/config-files/config_ant_matrix.cfg
@@ -16,8 +16,8 @@
   ! == Time of simulation
   ! =====================
 
-    start_time_of_run_config                     = -21000.0                              ! [yr] Start time of the simulation
-    end_time_of_run_config                       = -11000.0                          ! [yr] End   time of the simulation
+    start_time_of_run_config                     = -30000.0                              ! [yr] Start time of the simulation
+    end_time_of_run_config                       = -15000.0                          ! [yr] End   time of the simulation
 
   ! == Which model regions to simulate
   ! ==================================
@@ -189,14 +189,14 @@
     coastline_width_config                       = 12e3                             ! [m]          Width of the band around the coastline that should get this resolution
 
     ! Regions of interest
-    choice_regions_of_interest_config            = ''                               ! Regions of interest where other (higher) resolutions apply. Separated by double vertical bars "||", e.g. "PineIsland||Thwaites"
-    ROI_maximum_resolution_uniform_config        = 200e3                            ! [m]          Maximum resolution for the entire domain
-    ROI_maximum_resolution_grounded_ice_config   = 05e3                             ! [m]          Maximum resolution for grounded ice
-    ROI_maximum_resolution_floating_ice_config   = 02e3                             ! [m]          Maximum resolution for floating ice
-    ROI_maximum_resolution_grounding_line_config = 02e3                             ! [m]          Maximum resolution for the grounding line
-    ROI_maximum_resolution_calving_front_config  = 02e3                             ! [m]          Maximum resolution for the calving front
-    ROI_maximum_resolution_ice_front_config      = 05e3                             ! [m]          Maximum resolution for the ice front
-    ROI_maximum_resolution_coastline_config      = 05e3                             ! [m]          Maximum resolution for the coastline
+    choice_regions_of_interest_config            = 'Antarctic_Peninsula'                               ! Regions of interest where other (higher) resolutions apply. Separated by double vertical bars "||", e.g. "PineIsland||Thwaites"
+    ROI_maximum_resolution_uniform_config        = 100e3                            ! [m]          Maximum resolution for the entire domain
+    ROI_maximum_resolution_grounded_ice_config   = 30e3                             ! [m]          Maximum resolution for grounded ice
+    ROI_maximum_resolution_floating_ice_config   = 30e3                             ! [m]          Maximum resolution for floating ice
+    ROI_maximum_resolution_grounding_line_config = 10e3                             ! [m]          Maximum resolution for the grounding line
+    ROI_maximum_resolution_calving_front_config  = 10e3                             ! [m]          Maximum resolution for the calving front
+    ROI_maximum_resolution_ice_front_config      = 30e3                             ! [m]          Maximum resolution for the ice front
+    ROI_maximum_resolution_coastline_config      = 30e3                             ! [m]          Maximum resolution for the coastline
 
     ! Widths for each resolution band
     ROI_grounding_line_width_config              = 05e3                             ! [m]          Width of the band around the grounding line that should get this resolution
@@ -314,7 +314,7 @@
   ! ===========================================
 
     ! Calculation of dH/dt
-    choice_ice_integration_method_config         = 'explicit'                       ! Choice of ice thickness integration scheme: "none" (i.e. unchanging geometry), "explicit", "semi-implicit"
+    choice_ice_integration_method_config         = 'semi-implicit'                       ! Choice of ice thickness integration scheme: "none" (i.e. unchanging geometry), "explicit", "semi-implicit"
     dHi_semiimplicit_fs_config                   = 1.0                              ! Factor for the semi-implicit ice thickness solver (0 = explicit, 0<f<1 = semi-implicit, 1 = implicit, >1 = over-implicit)
     dHi_PETSc_rtol_config                        = 1E-7                             ! dHi PETSc solver - stop criterion, relative difference (iteration stops if rtol OR abstol is reached)
     dHi_PETSc_abstol_config                      = 1E-2                             ! dHi PETSc solver - stop criterion, absolute difference
@@ -841,8 +841,9 @@
   ! == Sea level
   ! ============
 
-    choice_sealevel_model_config                 = 'fixed'                          !     Can be "fixed", "prescribed", "eustatic", or "SELEN"
+    choice_sealevel_model_config                 = 'prescribed'                          !     Can be "fixed", "prescribed", "eustatic", or "SELEN"
     fixed_sealevel_config                        = 0.0                              ! [m] Fixed sea level value for the "fixed" choice
+    filename_prescribed_sealevel_config          = '/Users/frre9931/Documents/PhD/ANT_UFEMISM/global_forcings/sealevel/spratt2016_rsl_short.nc'
 
   ! == SELEN
   ! ========
@@ -878,8 +879,8 @@
     ! Basic settings
     do_create_netcdf_output_config               = .TRUE.                           !     Whether or not NetCDF output files should be created at all
     dt_output_config                             = 100.0                            !     Time step for writing output
-    dt_output_restart_config                     = 100.0                          !     Time step for writing restart output
-    dt_output_grid_config                        = 100.0                           !     Time step for writing gridded output
+    dt_output_restart_config                     = 10000.0                          !     Time step for writing restart output
+    dt_output_grid_config                        = 1000.0                           !     Time step for writing gridded output
     dx_output_grid_NAM_config                    = 10E3                             ! [m] Horizontal resolution for the square grid used for output for North America
     dx_output_grid_EAS_config                    = 10E3                             ! [m] Horizontal resolution for the square grid used for output for Eurasia
     dx_output_grid_GRL_config                    = 10E3                             ! [m] Horizontal resolution for the square grid used for output for Greenland
