--- a/config-files/config_ant_PD_inversion_dHdt.cfg
+++ b/config-files/config_ant_PD_inversion_dHdt.cfg
@@ -518,8 +518,8 @@
     timeframe_initial_ice_temperature_GRL_config = 1E9
     timeframe_initial_ice_temperature_ANT_config = 1E9
     ! Thermodynamical model
-    choice_thermo_model_config                   = 'none'               ! Choice of thermodynamical model: "none", "3D_heat_equation"
-    dt_thermodynamics_config                     = 2.0                              ! [yr] Time step for the thermodynamical model
+    choice_thermo_model_config                   = '3D_heat_equation'               ! Choice of thermodynamical model: "none", "3D_heat_equation"
+    dt_thermodynamics_config                     = 10.0                              ! [yr] Time step for the thermodynamical model
     Hi_min_thermo_config                         = 10.0                             ! [m]  Ice thinner than this is assumed to have a temperature equal to the annual mean surface temperature throughout the vertical column
     choice_GL_temperature_BC_config              = 'pmp'                            ! Choice of basal boundary condition at grounding lines: 'grounded', 'subgrid', 'pmp'
     choice_ice_heat_capacity_config              = 'Pounder1965'                    ! Choice of ice heat capacity model: "uniform", "Pounder1965"
