--- a/config-files/config_ant_PMIP.cfg
+++ b/config-files/config_ant_PMIP.cfg
@@ -5,7 +5,7 @@
 
     ! Output directory
     create_procedural_output_dir_config          = .FALSE.                          ! Automatically create an output directory with a procedural name (e.g. results_20210720_001/)
-    fixed_output_dir_config                      = 'results_ant_PMIP'           ! If not, create a directory with this name instead (stops the program if this directory already exists)
+    fixed_output_dir_config                      = 'results_ant_PMIP_MPI-ESM1-2'           ! If not, create a directory with this name instead (stops the program if this directory already exists)
 
     ! Debugging
     do_benchmarks_config                         = .FALSE.                          ! Whether or not to (only) perform the unit tests in the main_validation module
@@ -17,7 +17,7 @@
   ! =====================
 
     start_time_of_run_config                     = -20000.0                              ! [yr] Start time of the simulation
-    end_time_of_run_config                       = -15000.0                          ! [yr] End   time of the simulation
+    end_time_of_run_config                       = 0.0                          ! [yr] End   time of the simulation
 
   ! == Which model regions to simulate
   ! ==================================
@@ -314,7 +314,7 @@
   ! ===========================================
 
     ! Calculation of dH/dt
-    choice_ice_integration_method_config         = 'explicit'                       ! Choice of ice thickness integration scheme: "none" (i.e. unchanging geometry), "explicit", "semi-implicit"
+    choice_ice_integration_method_config         = 'semi-implicit'                       ! Choice of ice thickness integration scheme: "none" (i.e. unchanging geometry), "explicit", "semi-implicit"
     dHi_semiimplicit_fs_config                   = 1.0                              ! Factor for the semi-implicit ice thickness solver (0 = explicit, 0<f<1 = semi-implicit, 1 = implicit, >1 = over-implicit)
     dHi_PETSc_rtol_config                        = 1E-7                             ! dHi PETSc solver - stop criterion, relative difference (iteration stops if rtol OR abstol is reached)
     dHi_PETSc_abstol_config                      = 1E-2                             ! dHi PETSc solver - stop criterion, absolute difference
@@ -384,7 +384,7 @@
   ! =========================
 
     choice_calving_law_config                    = 'threshold_thickness'            ! Choice of calving law: "none", "threshold_thickness"
-    calving_threshold_thickness_shelf_config     = 150.0                              ! Threshold ice thickness for ice shelf calving front in the "threshold_thickness" calving law
+    calving_threshold_thickness_shelf_config     = 100.0                              ! Threshold ice thickness for ice shelf calving front in the "threshold_thickness" calving law
     calving_threshold_thickness_sheet_config     = 0.0                              ! Threshold ice thickness for ice sheet calving front in the "threshold_thickness" calving law
     max_calving_rounds_config                    = 20                               ! Maximum number of calving loops during chain reaction
     do_remove_shelves_config                     = .FALSE.                          ! If set to TRUE, all floating ice is always instantly removed (used in the ABUMIP-ABUK experiment)
@@ -518,8 +518,8 @@
     timeframe_initial_ice_temperature_GRL_config = 1E9
     timeframe_initial_ice_temperature_ANT_config = 1E9
     ! Thermodynamical model
-    choice_thermo_model_config                   = 'none'               ! Choice of thermodynamical model: "none", "3D_heat_equation"
-    dt_thermodynamics_config                     = 2.0                              ! [yr] Time step for the thermodynamical model
+    choice_thermo_model_config                   = '3D_heat_equation'               ! Choice of thermodynamical model: "none", "3D_heat_equation"
+    dt_thermodynamics_config                     = 10.0                              ! [yr] Time step for the thermodynamical model
     Hi_min_thermo_config                         = 10.0                             ! [m]  Ice thinner than this is assumed to have a temperature equal to the annual mean surface temperature throughout the vertical column
     choice_GL_temperature_BC_config              = 'pmp'                            ! Choice of basal boundary condition at grounding lines: 'grounded', 'subgrid', 'pmp'
     choice_ice_heat_capacity_config              = 'Pounder1965'                    ! Choice of ice heat capacity model: "uniform", "Pounder1965"
@@ -566,14 +566,14 @@
     filename_climate_snapshot_NAM_config         = ''
     filename_climate_snapshot_EAS_config         = ''
     filename_climate_snapshot_GRL_config         = ''
-    filename_climate_snapshot_ANT_config         = '/Users/frre9931/Documents/PhD/ANT_UFEMISM/preprocessing_input/snapshot_ANT_lgm_MIROC-ES2L.nc'
+    filename_climate_snapshot_ANT_config         = '/Users/frre9931/Documents/PhD/ANT_UFEMISM/preprocessing_input/snapshot_ANT_lgm_MPI-ESM1-2.nc'
     
     choice_insolation_forcing_config             = 'static'                         ! 'static' or 'realistic'
     filename_insolation_config                   = '/Users/frre9931/Documents/PhD/ANT_UFEMISM/global_forcings/Insolation/Laskar_etal_2004_insolation.nc'                               ! File with the insolation solution (Laskar 2004)
     static_insolation_time_config                = -21000.0                              ! [ka?] time to use for a static insolation
 
     do_lapse_rate_corrections_ANT_config         = .FALSE.                           ! Whether or not to apply a lapse rate correction
-    lapse_rate_temp_ANT_config                   = 7.9E-3                              ! [K km^-1] Lapse rate for Antarctica
+    lapse_rate_temp_ANT_config                   = 0.0079                              ! [K km^-1] Lapse rate for Antarctica
     !lapse_rate_precip_ANT_config                 = 0.07                              ! 
  
 
@@ -729,7 +729,7 @@
     uniform_BMB_config                           = 0.0
 
     ! "parameterised"
-    BMB_Favier2019_gamma_config                  = 99.32E-5 !the original from Favier et al. (2019) is 99.32E-5
+    BMB_Favier2019_gamma_config                  = 10.0E-5 !the original from Favier et al. (2019) is 99.32E-5
 
   ! == Lateral mass balance
   ! =======================
@@ -761,7 +761,7 @@
   ! ============
 
     choice_sealevel_model_config                 = 'fixed'                          !     Can be "fixed", "prescribed", "eustatic", or "SELEN"
-    fixed_sealevel_config                        = 0.0                              ! [m] Fixed sea level value for the "fixed" choice
+    fixed_sealevel_config                        = -130.0                              ! [m] Fixed sea level value for the "fixed" choice
 
   ! == SELEN
   ! ========
@@ -796,9 +796,9 @@
 
     ! Basic settings
     do_create_netcdf_output_config               = .TRUE.                           !     Whether or not NetCDF output files should be created at all
-    dt_output_config                             = 10.0                            !     Time step for writing output
-    dt_output_restart_config                     = 1000.0                          !     Time step for writing restart output
-    dt_output_grid_config                        = 10.0                           !     Time step for writing gridded output
+    dt_output_config                             = 100.0                            !     Time step for writing output
+    dt_output_restart_config                     = 10000.0                          !     Time step for writing restart output
+    dt_output_grid_config                        = 1000.0                           !     Time step for writing gridded output
     dx_output_grid_NAM_config                    = 10E3                             ! [m] Horizontal resolution for the square grid used for output for North America
     dx_output_grid_EAS_config                    = 10E3                             ! [m] Horizontal resolution for the square grid used for output for Eurasia
     dx_output_grid_GRL_config                    = 10E3                             ! [m] Horizontal resolution for the square grid used for output for Greenland
@@ -827,7 +827,7 @@
     choice_output_field_16_config                = 'coastline'
     choice_output_field_17_config                = 'Precip'
     choice_output_field_18_config                = 'T2m'
-    choice_output_field_19_config                = 'none'
+    choice_output_field_19_config                = 'grounded_ice_contour'
     choice_output_field_20_config                = 'none'
     choice_output_field_21_config                = 'none'
     choice_output_field_22_config                = 'none'
