--- a/config-files_tetralith/config_tetralith_matrix.cfg
+++ b/config-files_tetralith/config_tetralith_matrix.cfg
@@ -90,7 +90,7 @@
     filename_refgeo_init_NAM_config              = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/data/ETOPO1/NorthAmerica_ETOPO1_5km.nc'
     filename_refgeo_init_EAS_config              = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/data/ETOPO1/Eurasia_ETOPO1_5km.nc'
     filename_refgeo_init_GRL_config              = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/data/Bedmachine_Greenland/BedMachine_Greenland_v4_2km.nc'
-    filename_refgeo_init_ANT_config              = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/data/Bedmachine_Antarctica/Bedmachine_v3_Antarctica_5km.nc'
+    filename_refgeo_init_ANT_config              = '/home/x_frare/data/Bedmachine_Antarctica/Bedmachine_v3_Antarctica_5km.nc'
     ! Timeframe to read from the geometry file (set to 1E9    if the file has no time dimension)
     timeframe_refgeo_init_NAM_config             = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_refgeo_init_EAS_config             = 1E9
@@ -111,7 +111,7 @@
     filename_refgeo_PD_NAM_config                = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/data/ETOPO1/NorthAmerica_ETOPO1_5km.nc'
     filename_refgeo_PD_EAS_config                = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/data/ETOPO1/Eurasia_ETOPO1_5km.nc'
     filename_refgeo_PD_GRL_config                = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/data/Bedmachine_Greenland/BedMachine_Greenland_v4_2km.nc'
-    filename_refgeo_PD_ANT_config                = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/data/Bedmachine_Antarctica/Bedmachine_v3_Antarctica_5km.nc'
+    filename_refgeo_PD_ANT_config                = '/home/x_frare/data/Bedmachine_Antarctica/Bedmachine_v3_Antarctica_5km.nc'
     ! Timeframe to read from the geometry file (set to 1E9    if the file has no time dimension)
     timeframe_refgeo_PD_NAM_config               = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_refgeo_PD_EAS_config               = 1E9
@@ -132,7 +132,7 @@
     filename_refgeo_GIAeq_NAM_config             = 'data/ETOPO1/NorthAmerica_ETOPO1_5km.nc'
     filename_refgeo_GIAeq_EAS_config             = 'data/ETOPO1/Eurasia_ETOPO1_5km.nc'
     filename_refgeo_GIAeq_GRL_config             = 'data/Bedmachine_Greenland/BedMachine_Greenland_v4_2km.nc'
-    filename_refgeo_GIAeq_ANT_config             = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/data/Bedmachine_Antarctica/Bedmachine_v3_Antarctica_5km.nc'
+    filename_refgeo_GIAeq_ANT_config             = '/home/x_frare/data/Bedmachine_Antarctica/Bedmachine_v3_Antarctica_5km.nc'
     ! Timeframe to read from the geometry file (set to 1E9    if the file has no time dimension)
     timeframe_refgeo_GIAeq_NAM_config            = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_refgeo_GIAeq_EAS_config            = 1E9
@@ -437,46 +437,6 @@
     Martin2011_hydro_Hb_min_config               = 0.0                              ! Martin et al. (2011) basal hydrology model: low-end  Hb  value of bedrock-dependent pore-water pressure
     Martin2011_hydro_Hb_max_config               = 1000.0                           ! Martin et al. (2011) basal hydrology model: high-end Hb  value of bedrock-dependent pore-water pressure
 
-    ! Initialisation of the pore water fraction
-    !pore_water_fraction_choice_initialise_NAM_config = 'zero'                       ! How to initialise the pore water fraction: 'zero', 'read_from_file'
-    !pore_water_fraction_choice_initialise_EAS_config = 'zero'
-    !pore_water_fraction_choice_initialise_GRL_config = 'zero'
-    !pore_water_fraction_choice_initialise_ANT_config = 'zero'
-    ! Paths to files containing pore water fraction fields 
-    !filename_pore_water_fraction_NAM_config      = ''
-    !filename_pore_water_fraction_EAS_config      = ''
-    !filename_pore_water_fraction_GRL_config      = ''
-    !filename_pore_water_fraction_ANT_config      = ''
-    ! Timeframes to read from the pore water fraction file (set to 1E9    if the file has no time dimension)
-    !timeframe_pore_water_fraction_NAM_config     = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
-    !timeframe_pore_water_fraction_EAS_config     = 1E9
-    !timeframe_pore_water_fraction_GRL_config     = 1E9
-    !timeframe_pore_water_fraction_ANT_config     = 1E9
-
-  ! == Basal hydrology inversion by nudging
-  ! =======================================
-
-    ! General
-    !do_pore_water_nudging_config                 = .FALSE.                           !           Whether or not to nudge the pore water pressure
-    !choice_pore_water_nudging_method_config      = 'mixed'                          !           Choice of pore water nudging method: "local", "flowline"
-    !pore_water_nudging_dt_config                 = 5.0                              ! [yr]      Time step for pore water updates
-    !pore_water_nudging_t_start_config            = -9.9E9                           ! [yr]      Earliest model time when nudging is allowed
-    !pore_water_nudging_t_end_config              = +1.5E4                           ! [yr]      Latest   model time when nudging is allowed
-    !pore_water_fraction_min_config               = 0.0                              ! [0-1]     Smallest allowed value for the inverted pore water fraction field
-    !pore_water_fraction_max_config               = 0.9999                           ! [0-1]     Largest  allowed value for the inverted pore water fraction field
-    !filename_inverted_pore_water_config          = 'pore_water_inv.nc'              !           NetCDF file where the final inverted pore water fields will be saved
-
-    ! Basal hydrology inversion model based on local and flowline-averaged values of H and dH/dt
-    !porenudge_H_dHdt_flowline_t_scale_config     = 150.0                            ! [yr]      Timescale
-    !porenudge_H_dHdt_flowline_dH0_config         = 200.0                            ! [m]       Ice thickness error scale
-    !porenudge_H_dHdt_flowline_dHdt0_config       = 0.6                              ! [m yr^-1] Thinning rate scale
-    !porenudge_H_dHdt_flowline_dU0_config         = 100.0                            ! [m yr^-1] Ice surface speed error scale
-    !porenudge_H_dHdt_flowline_Hi_scale_config    = 100.0                            ! [m]       Ice thickness weight scale
-    !porenudge_H_dHdt_flowline_u_scale_config     = 1000.0                           ! [m yr^-1] Ice velocity  weight scale
-    !porenudge_H_dHdt_flowline_r_smooth_config    = 5000.0                           ! [m]       Radius for Gaussian filter used to smooth dC/dt as regularisation
-    !porenudge_H_dHdt_flowline_w_smooth_config    = 0.0                              ! [-]       Relative contribution of smoothed dC/dt in regularisation
-    !porenudge_H_dHdt_flowline_dist_max_config    = 1000.0                           ! [km]      Max total distance the trace is allowed to move before ending it
-
   ! == Bed roughness
   ! ================
 
@@ -486,7 +446,7 @@
     filename_bed_roughness_NAM_config            = ''
     filename_bed_roughness_EAS_config            = ''
     filename_bed_roughness_GRL_config            = ''
-    filename_bed_roughness_ANT_config            = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/data/Sediments/Li_2020/till_friction_angle_Li2020.nc'
+    filename_bed_roughness_ANT_config            = '/home/x_frare/data/Sediments/Li_2020/till_friction_angle_Li2020.nc'
     ! Timeframes to read from the bed roughness file (set to 1E9    if the file has no time dimension)
     timeframe_bed_roughness_NAM_config           = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_bed_roughness_EAS_config           = 1E9
@@ -537,7 +497,7 @@
 
     choice_geothermal_heat_flux_config           = 'read_from_file'                 ! Choice of geothermal heat flux; can be 'uniform' or 'read_from_file'
     uniform_geothermal_heat_flux_config          = 1.72E06                          ! [J m^-2 yr^-1] Value when choice_geothermal_heat_flux == 'uniform' (1.72E06 J m^-2 yr^-1 according to Sclater et al. (1980))
-    filename_geothermal_heat_flux_config         = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/data/GHF/ShapiroRitzwoller2004_global.nc' ! Expected units: J m^-2 s^-1 (conversion done internally). External GHF data file.
+    filename_geothermal_heat_flux_config         = '/home/x_frare/data/GHF/ShapiroRitzwoller2004_global.nc' ! Expected units: J m^-2 s^-1 (conversion done internally). External GHF data file.
 
   ! == Thermodynamics
   ! =================
@@ -614,11 +574,11 @@
     filename_climate_snapshot_ANT_config         = '/Users/frre9931/Documents/PhD/RACMO/RACMO_clim_1979_2021_winds_noNaN.nc'
 
     ! Climate - global forcings
-    filename_CO2_record_config                   = '/Users/frre9931/Documents/PhD/ANT_UFEMISM/global_forcings/CO2/ant_ice_core_composite_co2_flipped.nc'
+    filename_CO2_record_config                   = '/home/x_frare/data/global_forcings/ant_ice_core_composite_co2_flipped.nc'
     filename_d18O_record_config                  = ''
     
     choice_insolation_forcing_config             = 'realistic'                         ! 'static' or 'realistic'
-    filename_insolation_config                   = '/Users/frre9931/Documents/PhD/ANT_UFEMISM/global_forcings/Insolation/Laskar_etal_2004_insolation.nc'                               ! File with the insolation solution (Laskar 2004)
+    filename_insolation_config                   = '/home/x_frare/data/global_forcings/Laskar_etal_2004_insolation.nc'                               ! File with the insolation solution (Laskar 2004)
 !    static_insolation_time_config                = 0.0                              ! [ka?] time to use for a static insolation
     
    ! == Climate matrix
@@ -627,9 +587,9 @@
     climate_matrix_filename_PD_obs_climate_config              = '/Users/frre9931/Documents/PhD/RACMO/RACMO_clim_1979_2021_winds_noNaN.nc'
 
     ! GCM snapshots in the matrix_warm_cold option
-    climate_matrix_filename_climate_snapshot_PI_config   = '/Users/frre9931/Documents/PhD/ANT_UFEMISM/preprocessing_input/snapshot_ANT_piControl_AWIESM1.nc'
-    climate_matrix_filename_climate_snapshot_warm_config = '/Users/frre9931/Documents/PhD/ANT_UFEMISM/preprocessing_input/snapshot_ANT_piControl_AWIESM1.nc'
-    climate_matrix_filename_climate_snapshot_cold_config = '/Users/frre9931/Documents/PhD/ANT_UFEMISM/preprocessing_input/snapshot_ANT_lgm_AWIESM1.nc'
+    climate_matrix_filename_climate_snapshot_PI_config   = '/home/x_frare/data/climate/PMIP/snapshot_ANT_piControl_AWIESM1.nc'
+    climate_matrix_filename_climate_snapshot_warm_config = '/home/x_frare/data/climate/PMIP/snapshot_ANT_piControl_AWIESM1.nc'
+    climate_matrix_filename_climate_snapshot_cold_config = '/home/x_frare/data/climate/PMIP/snapshot_ANT_lgm_AWIESM1.nc'
 
     climate_matrix_constant_lapserate_config             = 0.008                ! Constant atmospheric lapse rate [K m^-1]
 
@@ -678,7 +638,7 @@
     filename_ocean_snapshot_NAM_config           = ''
     filename_ocean_snapshot_EAS_config           = ''
     filename_ocean_snapshot_GRL_config           = ''
-    filename_ocean_snapshot_ANT_config           = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/data/woa18_decav_ts00_04_remapcon_r360x180_NaN.nc'
+    filename_ocean_snapshot_ANT_config           = '/home/x_frare/data/ocean/woa18_decav_ts00_04_remapcon_r360x180_NaN.nc'
 
   ! == Surface mass balance
   ! =======================
@@ -843,7 +803,7 @@
 
     choice_sealevel_model_config                 = 'prescribed'                          !     Can be "fixed", "prescribed", "eustatic", or "SELEN"
     fixed_sealevel_config                        = 0.0                              ! [m] Fixed sea level value for the "fixed" choice
-    filename_prescribed_sealevel_config          = '/Users/frre9931/Documents/PhD/ANT_UFEMISM/global_forcings/sealevel/spratt2016_rsl_short.nc'
+    filename_prescribed_sealevel_config          = '/home/x_frare/data/global_forcings/spratt2016_rsl_short.nc'
 
   ! == SELEN
   ! ========
