--- a/config-files_tetralith/config_tetralith_PD_inversion_dHdt.cfg
+++ b/config-files_tetralith/config_tetralith_PD_inversion_dHdt.cfg
@@ -90,7 +90,7 @@
     filename_refgeo_init_NAM_config              = 'data/ETOPO1/NorthAmerica_ETOPO1_5km.nc'
     filename_refgeo_init_EAS_config              = 'data/ETOPO1/Eurasia_ETOPO1_5km.nc'
     filename_refgeo_init_GRL_config              = 'data/Bedmachine_Greenland/BedMachine_Greenland_v4_2km.nc'
-    filename_refgeo_init_ANT_config              = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/results_ant_PD_spinup/main_output_ANT_00001.nc'
+    filename_refgeo_init_ANT_config              = '/home/x_frare/UFEMISM2.0/results_ant_PD_spinup/main_output_ANT_00001.nc'
     ! Timeframe to read from the geometry file (set to 1E9    if the file has no time dimension)
     timeframe_refgeo_init_NAM_config             = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_refgeo_init_EAS_config             = 1E9
@@ -111,7 +111,7 @@
     filename_refgeo_PD_NAM_config                = 'data/ETOPO1/NorthAmerica_ETOPO1_5km.nc'
     filename_refgeo_PD_EAS_config                = 'data/ETOPO1/Eurasia_ETOPO1_5km.nc'
     filename_refgeo_PD_GRL_config                = 'data/Bedmachine_Greenland/BedMachine_Greenland_v4_2km.nc'
-    filename_refgeo_PD_ANT_config                = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/results_ant_PD_spinup/main_output_ANT_00001.nc'
+    filename_refgeo_PD_ANT_config                = '/home/x_frare/UFEMISM2.0/results_ant_PD_spinup/main_output_ANT_00001.nc'
     ! Timeframe to read from the geometry file (set to 1E9    if the file has no time dimension)
     timeframe_refgeo_PD_NAM_config               = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_refgeo_PD_EAS_config               = 1E9
@@ -132,7 +132,7 @@
     filename_refgeo_GIAeq_NAM_config             = 'data/ETOPO1/NorthAmerica_ETOPO1_5km.nc'
     filename_refgeo_GIAeq_EAS_config             = 'data/ETOPO1/Eurasia_ETOPO1_5km.nc'
     filename_refgeo_GIAeq_GRL_config             = 'data/Bedmachine_Greenland/BedMachine_Greenland_v4_2km.nc'
-    filename_refgeo_GIAeq_ANT_config             = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/results_ant_PD_spinup/main_output_ANT_00001.nc'
+    filename_refgeo_GIAeq_ANT_config             = '/home/x_frare/UFEMISM2.0/results_ant_PD_spinup/main_output_ANT_00001.nc'
     ! Timeframe to read from the geometry file (set to 1E9    if the file has no time dimension)
     timeframe_refgeo_GIAeq_NAM_config            = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_refgeo_GIAeq_EAS_config            = 1E9
@@ -171,7 +171,7 @@
     filename_initial_mesh_NAM_config             = ''
     filename_initial_mesh_EAS_config             = ''
     filename_initial_mesh_GRL_config             = ''
-    filename_initial_mesh_ANT_config             = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/results_ant_PD_spinup/main_output_ANT_00001.nc'
+    filename_initial_mesh_ANT_config             = '/home/x_frare/UFEMISM2.0/results_ant_PD_spinup/main_output_ANT_00001.nc'
 
     ! Resolutions for different parts of the ice sheet
     maximum_resolution_uniform_config            = 200e3                            ! [m]          Maximum resolution for the entire domain
@@ -337,7 +337,7 @@
     filename_dHi_dt_target_NAM_config            = ''
     filename_dHi_dt_target_EAS_config            = ''
     filename_dHi_dt_target_GRL_config            = ''
-    filename_dHi_dt_target_ANT_config            = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/data/dHdt_Antarctica/dHdt_antarctica_4km.nc'
+    filename_dHi_dt_target_ANT_config            = '/home/x_frare/data/dHdt_Antarctica/dHdt_antarctica_4km.nc'
 
     ! Timeframes for reading target dHi_dt from file (set to 1E9_dp if the file has no time dimension)
     timeframe_dHi_dt_target_NAM_config           = 1E9
@@ -446,7 +446,7 @@
     filename_bed_roughness_NAM_config            = ''
     filename_bed_roughness_EAS_config            = ''
     filename_bed_roughness_GRL_config            = ''
-    filename_bed_roughness_ANT_config            = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/data/Sediments/Li_2020/till_friction_angle_Li2020.nc'
+    filename_bed_roughness_ANT_config            = '/home/x_frare/UFEMISM2.0/results_ant_PD_spinup/main_output_ANT_00001.nc'
     ! Timeframes to read from the bed roughness file (set to 1E9    if the file has no time dimension)
     timeframe_bed_roughness_NAM_config           = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_bed_roughness_EAS_config           = 1E9
@@ -566,10 +566,10 @@
     filename_climate_snapshot_NAM_config         = ''
     filename_climate_snapshot_EAS_config         = ''
     filename_climate_snapshot_GRL_config         = ''
-    filename_climate_snapshot_ANT_config         = '/Users/frre9931/Documents/PhD/RACMO/RACMO_clim_1979_2021_winds_noNaN.nc'
+    filename_climate_snapshot_ANT_config         = '/home/x_frare/data/climate/RACMO_clim_1979_2021_winds_noNaN.nc'
     
     choice_insolation_forcing_config             = 'static'                         ! 'static' or 'realistic'
-    filename_insolation_config                   = '/Users/frre9931/Documents/PhD/ANT_UFEMISM/global_forcings/Insolation/Laskar_etal_2004_insolation.nc'                               ! File with the insolation solution (Laskar 2004)
+    filename_insolation_config                   = '/home/x_frare/data/global_forcings/Laskar_etal_2004_insolation.nc'                               ! File with the insolation solution (Laskar 2004)
     static_insolation_time_config                = -21000.0                              ! [ka?] time to use for a static insolation
  
 
@@ -599,7 +599,7 @@
     filename_ocean_snapshot_NAM_config           = ''
     filename_ocean_snapshot_EAS_config           = ''
     filename_ocean_snapshot_GRL_config           = ''
-    filename_ocean_snapshot_ANT_config           = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/external/data/ocean/woa18_decav_ts00_04_remapcon_r360x180_NaN.nc'
+    filename_ocean_snapshot_ANT_config           = '/home/x_frare/data/ocean/woa18_decav_ts00_04_remapcon_r360x180_NaN.nc'
 
   ! == Surface mass balance
   ! =======================
@@ -630,7 +630,7 @@
     filename_SMB_prescribed_NAM_config           = ''
     filename_SMB_prescribed_EAS_config           = ''
     filename_SMB_prescribed_GRL_config           = ''
-    filename_SMB_prescribed_ANT_config           = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/results_ant_PD_spinup/main_output_ANT_00001.nc'
+    filename_SMB_prescribed_ANT_config           = '/home/x_frare/data/RACMO/Antarctica/RACMO_SMB_1979_2016.nc'
 
     ! Timeframes for reading prescribed SMB forcing from file (set to 1E9 if the file has no time dimension)
     timeframe_SMB_prescribed_NAM_config          = 1E9
