--- a/config-files_tetralith/config_tetralith_PD_inversion_dHdt.cfg
+++ b/config-files_tetralith/config_tetralith_PD_inversion_dHdt.cfg
@@ -492,7 +492,7 @@
 
     choice_geothermal_heat_flux_config           = 'read_from_file'                 ! Choice of geothermal heat flux; can be 'uniform' or 'read_from_file'
     uniform_geothermal_heat_flux_config          = 1.72E06                          ! [J m^-2 yr^-1] Value when choice_geothermal_heat_flux == 'uniform' (1.72E06 J m^-2 yr^-1 according to Sclater et al. (1980))
-    filename_geothermal_heat_flux_config         = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/external/data/geothermal_heat_flux/ShapiroRitzwoller2004_global.nc' ! Expected units: J m^-2 s^-1 (conversion done internally). External GHF data file.
+    filename_geothermal_heat_flux_config         = '/home/x_frare/data/GHF/ShapiroRitzwoller2004_global.nc' ! Expected units: J m^-2 s^-1 (conversion done internally). External GHF data file.
 
   ! == Thermodynamics
   ! =================
