--- a/config-files_tetralith/config_tetralith_PMIP.cfg
+++ b/config-files_tetralith/config_tetralith_PMIP.cfg
@@ -5,7 +5,7 @@
 
     ! Output directory
     create_procedural_output_dir_config          = .FALSE.                          ! Automatically create an output directory with a procedural name (e.g. results_20210720_001/)
-    fixed_output_dir_config                      = 'results_ant_PMIP_MPI-ESM1-2'           ! If not, create a directory with this name instead (stops the program if this directory already exists)
+    fixed_output_dir_config                      = 'results_ant_PMIP_AWIESM1'           ! If not, create a directory with this name instead (stops the program if this directory already exists)
 
     ! Debugging
     do_benchmarks_config                         = .FALSE.                          ! Whether or not to (only) perform the unit tests in the main_validation module
@@ -90,7 +90,7 @@
     filename_refgeo_init_NAM_config              = 'data/ETOPO1/NorthAmerica_ETOPO1_5km.nc'
     filename_refgeo_init_EAS_config              = 'data/ETOPO1/Eurasia_ETOPO1_5km.nc'
     filename_refgeo_init_GRL_config              = 'data/Bedmachine_Greenland/BedMachine_Greenland_v4_2km.nc'
-    filename_refgeo_init_ANT_config              = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/results_ant_PD_inversion_dHdt/main_output_ANT_00001.nc'
+    filename_refgeo_init_ANT_config              = '/home/x_frare/UFEMISM2.0/results_ant_PD_inversion_dHdt/main_output_ANT_00001.nc'
     ! Timeframe to read from the geometry file (set to 1E9    if the file has no time dimension)
     timeframe_refgeo_init_NAM_config             = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_refgeo_init_EAS_config             = 1E9
@@ -111,7 +111,7 @@
     filename_refgeo_PD_NAM_config                = 'data/ETOPO1/NorthAmerica_ETOPO1_5km.nc'
     filename_refgeo_PD_EAS_config                = 'data/ETOPO1/Eurasia_ETOPO1_5km.nc'
     filename_refgeo_PD_GRL_config                = 'data/Bedmachine_Greenland/BedMachine_Greenland_v4_2km.nc'
-    filename_refgeo_PD_ANT_config                = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/results_ant_PD_inversion_dHdt/main_output_ANT_00001.nc'
+    filename_refgeo_PD_ANT_config                = '/home/x_frare/UFEMISM2.0/results_ant_PD_inversion_dHdt/main_output_ANT_00001.nc'
     ! Timeframe to read from the geometry file (set to 1E9    if the file has no time dimension)
     timeframe_refgeo_PD_NAM_config               = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_refgeo_PD_EAS_config               = 1E9
@@ -132,7 +132,7 @@
     filename_refgeo_GIAeq_NAM_config             = 'data/ETOPO1/NorthAmerica_ETOPO1_5km.nc'
     filename_refgeo_GIAeq_EAS_config             = 'data/ETOPO1/Eurasia_ETOPO1_5km.nc'
     filename_refgeo_GIAeq_GRL_config             = 'data/Bedmachine_Greenland/BedMachine_Greenland_v4_2km.nc'
-    filename_refgeo_GIAeq_ANT_config             = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/results_ant_PD_inversion_dHdt/main_output_ANT_00001.nc'
+    filename_refgeo_GIAeq_ANT_config             = '/home/x_frare/UFEMISM2.0/results_ant_PD_inversion_dHdt/main_output_ANT_00001.nc'
     ! Timeframe to read from the geometry file (set to 1E9    if the file has no time dimension)
     timeframe_refgeo_GIAeq_NAM_config            = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_refgeo_GIAeq_EAS_config            = 1E9
@@ -171,7 +171,7 @@
     filename_initial_mesh_NAM_config             = ''
     filename_initial_mesh_EAS_config             = ''
     filename_initial_mesh_GRL_config             = ''
-    filename_initial_mesh_ANT_config             = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/results_ant_PD_inversion_dHdt/main_output_ANT_00001.nc'
+    filename_initial_mesh_ANT_config             = '/home/x_frare/UFEMISM2.0/results_ant_PD_inversion_dHdt/main_output_ANT_00001.nc'
 
     ! Resolutions for different parts of the ice sheet
     maximum_resolution_uniform_config            = 200e3                            ! [m]          Maximum resolution for the entire domain
@@ -492,7 +492,7 @@
 
     choice_geothermal_heat_flux_config           = 'read_from_file'                 ! Choice of geothermal heat flux; can be 'uniform' or 'read_from_file'
     uniform_geothermal_heat_flux_config          = 1.72E06                          ! [J m^-2 yr^-1] Value when choice_geothermal_heat_flux == 'uniform' (1.72E06 J m^-2 yr^-1 according to Sclater et al. (1980))
-    filename_geothermal_heat_flux_config         = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/data/GHF/ShapiroRitzwoller2004_global.nc' ! Expected units: J m^-2 s^-1 (conversion done internally). External GHF data file.
+    filename_geothermal_heat_flux_config         = '/home/x_frare/data/GHF/ShapiroRitzwoller2004_global.nc' ! Expected units: J m^-2 s^-1 (conversion done internally). External GHF data file.
 
   ! == Thermodynamics
   ! =================
@@ -566,10 +566,10 @@
     filename_climate_snapshot_NAM_config         = ''
     filename_climate_snapshot_EAS_config         = ''
     filename_climate_snapshot_GRL_config         = ''
-    filename_climate_snapshot_ANT_config         = '/Users/frre9931/Documents/PhD/ANT_UFEMISM/preprocessing_input/snapshot_ANT_lgm_MPI-ESM1-2.nc'
+    filename_climate_snapshot_ANT_config         = '/home/x_frare/data/climate/PMIP/snapshot_ANT_lgm_AWIESM1.nc'
     
     choice_insolation_forcing_config             = 'static'                         ! 'static' or 'realistic'
-    filename_insolation_config                   = '/Users/frre9931/Documents/PhD/ANT_UFEMISM/global_forcings/Insolation/Laskar_etal_2004_insolation.nc'                               ! File with the insolation solution (Laskar 2004)
+    filename_insolation_config                   = '/home/x_frare/data/global_forcings/Laskar_etal_2004_insolation.nc'                               ! File with the insolation solution (Laskar 2004)
     static_insolation_time_config                = -21000.0                              ! [ka?] time to use for a static insolation
 
     do_lapse_rate_corrections_ANT_config         = .FALSE.                           ! Whether or not to apply a lapse rate correction
@@ -603,7 +603,7 @@
     filename_ocean_snapshot_NAM_config           = ''
     filename_ocean_snapshot_EAS_config           = ''
     filename_ocean_snapshot_GRL_config           = ''
-    filename_ocean_snapshot_ANT_config           = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/data/woa18_decav_ts00_04_remapcon_r360x180_NaN.nc'
+    filename_ocean_snapshot_ANT_config           = '/home/x_frare/data/ocean/woa18_decav_ts00_04_remapcon_r360x180_NaN.nc'
 
   ! == Surface mass balance
   ! =======================
