--- a/config-files_tetralith/config_tetralith_PMIP_INM-CM4-8.cfg
+++ b/config-files_tetralith/config_tetralith_PMIP_INM-CM4-8.cfg
@@ -572,7 +572,7 @@
     filename_insolation_config                   = '/home/x_frare/data/global_forcings/Laskar_etal_2004_insolation.nc'                               ! File with the insolation solution (Laskar 2004)
     static_insolation_time_config                = -21000.0                              ! [ka?] time to use for a static insolation
 
-    do_lapse_rate_corrections_ANT_config         = .TRUE.                           ! Whether or not to apply a lapse rate correction
+    do_lapse_rate_corrections_ANT_config         = .FALSE.                           ! Whether or not to apply a lapse rate correction
     lapse_rate_temp_ANT_config                   = 0.008                              ! [K km^-1] Lapse rate for Antarctica
     !lapse_rate_precip_ANT_config                 = 0.07                              ! 
  
