--- a/config-files_tetralith/config_tetralith_PD_inversion_dHdt_init.cfg
+++ b/config-files_tetralith/config_tetralith_PD_inversion_dHdt_init.cfg
@@ -473,7 +473,7 @@
     ! General
     do_bed_roughness_nudging_config              = .TRUE.                          !           Whether or not to nudge the basal roughness
     choice_bed_roughness_nudging_method_config   = 'H_dHdt_flowline'                               !           Choice of bed roughness nudging method
-    choice_inversion_target_geometry_config      = 'PD'                             !           Which reference geometry to use as the target geometry (can be "init" or "PD")
+    choice_inversion_target_geometry_config      = 'init'                             !           Which reference geometry to use as the target geometry (can be "init" or "PD")
     bed_roughness_nudging_dt_config              = 5.0                              ! [yr]      Time step for bed roughness updates
     bed_roughness_nudging_t_start_config         = -9.9E9                           ! [yr]      Earliest model time when nudging is allowed
     bed_roughness_nudging_t_end_config           = +9.9E9                           ! [yr]      Latest   model time when nudging is allowed
@@ -570,7 +570,7 @@
     
     choice_insolation_forcing_config             = 'static'                         ! 'static' or 'realistic'
     filename_insolation_config                   = '/home/x_frare/data/global_forcings/Laskar_etal_2004_insolation.nc'                               ! File with the insolation solution (Laskar 2004)
-    static_insolation_time_config                = -21000.0                              ! [ka?] time to use for a static insolation
+    static_insolation_time_config                = 0.0                              ! [ka?] time to use for a static insolation
  
 
   ! == Ocean
@@ -630,7 +630,7 @@
     filename_SMB_prescribed_NAM_config           = ''
     filename_SMB_prescribed_EAS_config           = ''
     filename_SMB_prescribed_GRL_config           = ''
-    filename_SMB_prescribed_ANT_config           = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_spinup/main_output_ANT_00001.nc'
+    filename_SMB_prescribed_ANT_config           = '/home/x_frare/data/RACMO/Antarctica/RACMO_SMB_1979_2016.nc'
 
     ! Timeframes for reading prescribed SMB forcing from file (set to 1E9 if the file has no time dimension)
     timeframe_SMB_prescribed_NAM_config          = 1E9
@@ -695,7 +695,7 @@
     choice_BMB_model_NAM_config                  = 'uniform'
     choice_BMB_model_EAS_config                  = 'uniform'
     choice_BMB_model_GRL_config                  = 'uniform'
-    choice_BMB_model_ANT_config                  = 'inverted' ! it cant be parameterised and mesh update
+    choice_BMB_model_ANT_config                  = 'parameterised' ! it cant be parameterised and mesh update
 
     ! Prescribed BMB forcing
     choice_BMB_prescribed_NAM_config             = ''
@@ -725,7 +725,7 @@
     uniform_BMB_config                           = 0.0
 
     ! "parameterised"
-    BMB_Favier2019_gamma_config                  = 99.32E-5
+    BMB_Favier2019_gamma_config                  = 10.0E-5
 
     ! "inverted"
     BMB_inversion_t_start_config                 = -9.9E9                           ! [yr] Only nudge melt rates when the model time lies between t_start and t_end
