--- a/config-files_tetralith/config_tetralith_PD_inversion_dHdt_init_ROI.cfg
+++ b/config-files_tetralith/config_tetralith_PD_inversion_dHdt_init_ROI.cfg
@@ -189,7 +189,7 @@
     coastline_width_config                       = 8e3                             ! [m]          Width of the band around the coastline that should get this resolution
 
     ! Regions of interest
-    choice_regions_of_interest_config            = 'Franka_WAIS||LarsenC'                               ! Regions of interest where other (higher) resolutions apply. Separated by double vertical bars "||", e.g. "PineIsland||Thwaites"
+    choice_regions_of_interest_config            = 'RiiserLarsen||Antarctic_Peninsula'                               ! Regions of interest where other (higher) resolutions apply. Separated by double vertical bars "||", e.g. "PineIsland||Thwaites"
     ROI_maximum_resolution_uniform_config        = 20e3                            ! [m]          Maximum resolution for the entire domain
     ROI_maximum_resolution_grounded_ice_config   = 16e3                             ! [m]          Maximum resolution for grounded ice
     ROI_maximum_resolution_floating_ice_config   = 4e3                             ! [m]          Maximum resolution for floating ice
