add config file using inversion for H_u_flowline

--- a/config-files_tetralith/config_tetralith_PD_inversion_u_init_ROI_gamma5.cfg
+++ b/config-files_tetralith/config_tetralith_PD_inversion_u_init_ROI_gamma5.cfg
@@ -476,7 +476,7 @@
 
     ! General
     do_bed_roughness_nudging_config              = .TRUE.                          !           Whether or not to nudge the basal roughness
-    choice_bed_roughness_nudging_method_config   = 'H_dHdt_flowline'                               !           Choice of bed roughness nudging method
+    choice_bed_roughness_nudging_method_config   = 'H_u_flowline'                               !           Choice of bed roughness nudging method
     choice_inversion_target_geometry_config      = 'init'                             !           Which reference geometry to use as the target geometry (can be "init" or "PD")
     bed_roughness_nudging_dt_config              = 5.0                              ! [yr]      Time step for bed roughness updates
     bed_roughness_nudging_t_start_config         = -9.9E9                           ! [yr]      Earliest model time when nudging is allowed
