change output file and ROI

--- a/config-files_tetralith/config_tetralith_PD_inversion_u_init_ROI_gamma5.cfg
+++ b/config-files_tetralith/config_tetralith_PD_inversion_u_init_ROI_gamma5.cfg
@@ -5,7 +5,7 @@
 
     ! Output directory
     create_procedural_output_dir_config          = .FALSE.                          ! Automatically create an output directory with a procedural name (e.g. results_20210720_001/)
-    fixed_output_dir_config                      = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_inversion_dHdt_init_ROI_gamma5'           ! If not, create a directory with this name instead (stops the program if this directory already exists)
+    fixed_output_dir_config                      = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_inversion_u_init_R-LIS_gamma5'           ! If not, create a directory with this name instead (stops the program if this directory already exists)
 
     ! Debugging
     do_benchmarks_config                         = .FALSE.                          ! Whether or not to (only) perform the unit tests in the main_validation module
@@ -189,7 +189,7 @@
     coastline_width_config                       = 8e3                             ! [m]          Width of the band around the coastline that should get this resolution
 
     ! Regions of interest
-    choice_regions_of_interest_config            = 'RiiserLarsen||Antarctic_Peninsula'                               ! Regions of interest where other (higher) resolutions apply. Separated by double vertical bars "||", e.g. "PineIsland||Thwaites"
+    choice_regions_of_interest_config            = 'RiiserLarsen'                               ! Regions of interest where other (higher) resolutions apply. Separated by double vertical bars "||", e.g. "PineIsland||Thwaites"
     ROI_maximum_resolution_uniform_config        = 20e3                            ! [m]          Maximum resolution for the entire domain
     ROI_maximum_resolution_grounded_ice_config   = 16e3                             ! [m]          Maximum resolution for grounded ice
     ROI_maximum_resolution_floating_ice_config   = 4e3                             ! [m]          Maximum resolution for floating ice
@@ -205,7 +205,7 @@
     ROI_coastline_width_config                   = 2e3                             ! [m]          Width of the band around the coastline that should get this resolution
 
     ! Miscellaneous refinement options
-    do_refine_TransAntMounts_glaciers_config     = .true.                          !              Whether or not to refine the mesh over the Transantarctic Mountains glaciers (resolving those really helps in getting a stable Ross ice shelf)
+    do_refine_TransAntMounts_glaciers_config     = .false.                          !              Whether or not to refine the mesh over the Transantarctic Mountains glaciers (resolving those really helps in getting a stable Ross ice shelf)
     max_res_TransAntMounts_glaciers_config       = 4e3                              ! [m]          Maximum resolution for the Transantarctic Mountains glaciers
 
     ! Mesh update settings
