change bed roughness to uniform

--- a/config-files_tetralith/config_tetralith_PD_inversion_u_init_R-LIS_gamma10.cfg
+++ b/config-files_tetralith/config_tetralith_PD_inversion_u_init_R-LIS_gamma10.cfg
@@ -5,7 +5,7 @@
 
     ! Output directory
     create_procedural_output_dir_config          = .FALSE.                          ! Automatically create an output directory with a procedural name (e.g. results_20210720_001/)
-    fixed_output_dir_config                      = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_inversion_u_init_R-LIS_gamma10'           ! If not, create a directory with this name instead (stops the program if this directory already exists)
+    fixed_output_dir_config                      = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_inversion_u_init_R-LIS_gamma10_v2'           ! If not, create a directory with this name instead (stops the program if this directory already exists)
 
     ! Debugging
     do_benchmarks_config                         = .FALSE.                          ! Whether or not to (only) perform the unit tests in the main_validation module
@@ -444,7 +444,7 @@
   ! == Bed roughness
   ! ================
 
-    choice_bed_roughness_config                  = 'read_from_file'                 ! Choice of source for friction coefficients: "uniform", "parameterised", "read_from_file"
+    choice_bed_roughness_config                  = 'uniform'                 ! Choice of source for friction coefficients: "uniform", "parameterised", "read_from_file"
     choice_bed_roughness_parameterised_config    = 'Martin2011'                     ! "Martin2011", "SSA_icestream", "MISMIP+", "BIVMIP_A", "BIVMIP_B", "BIVMIP_C"
     ! Paths to files containing bed roughness fields for the chosen sliding law
     filename_bed_roughness_NAM_config            = ''
