change config files to one that gives good results to test gamma

--- a/config-files_tetralith/config_tetralith_PD_inversion_dHdt_init_ROI_gamma10.cfg
+++ b/config-files_tetralith/config_tetralith_PD_inversion_dHdt_init_ROI_gamma10.cfg
@@ -5,7 +5,7 @@
 
     ! Output directory
     create_procedural_output_dir_config          = .FALSE.                          ! Automatically create an output directory with a procedural name (e.g. results_20210720_001/)
-    fixed_output_dir_config                      = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_inversion_dHdt_init_ROI_gamma10'           ! If not, create a directory with this name instead (stops the program if this directory already exists)
+    fixed_output_dir_config                      = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_inversion_dHdt_init_R-LIS_gamma10'           ! If not, create a directory with this name instead (stops the program if this directory already exists)
 
     ! Debugging
     do_benchmarks_config                         = .FALSE.                          ! Whether or not to (only) perform the unit tests in the main_validation module
@@ -189,27 +189,27 @@
     coastline_width_config                       = 8e3                             ! [m]          Width of the band around the coastline that should get this resolution
 
     ! Regions of interest
-    choice_regions_of_interest_config            = 'RiiserLarsen||Antarctic_Peninsula'                               ! Regions of interest where other (higher) resolutions apply. Separated by double vertical bars "||", e.g. "PineIsland||Thwaites"
+    choice_regions_of_interest_config            = 'RiiserLarsen'                               ! Regions of interest where other (higher) resolutions apply. Separated by double vertical bars "||", e.g. "PineIsland||Thwaites"
     ROI_maximum_resolution_uniform_config        = 20e3                            ! [m]          Maximum resolution for the entire domain
     ROI_maximum_resolution_grounded_ice_config   = 16e3                             ! [m]          Maximum resolution for grounded ice
-    ROI_maximum_resolution_floating_ice_config   = 4e3                             ! [m]          Maximum resolution for floating ice
-    ROI_maximum_resolution_grounding_line_config = 4e3                             ! [m]          Maximum resolution for the grounding line
-    ROI_maximum_resolution_calving_front_config  = 4e3                             ! [m]          Maximum resolution for the calving front
+    ROI_maximum_resolution_floating_ice_config   = 10e3                             ! [m]          Maximum resolution for floating ice
+    ROI_maximum_resolution_grounding_line_config = 10e3                             ! [m]          Maximum resolution for the grounding line
+    ROI_maximum_resolution_calving_front_config  = 10e3                             ! [m]          Maximum resolution for the calving front
     ROI_maximum_resolution_ice_front_config      = 10e3                             ! [m]          Maximum resolution for the ice front
     ROI_maximum_resolution_coastline_config      = 10e3                             ! [m]          Maximum resolution for the coastline
 
     ! Widths for each resolution band
-    ROI_grounding_line_width_config              = 2e3                             ! [m]          Width of the band around the grounding line that should get this resolution
-    ROI_calving_front_width_config               = 2e3                             ! [m]          Width of the band around the calving front that should get this resolution
-    ROI_ice_front_width_config                   = 2e3                             ! [m]          Width of the band around the ice front that should get this resolution
-    ROI_coastline_width_config                   = 2e3                             ! [m]          Width of the band around the coastline that should get this resolution
+    ROI_grounding_line_width_config              = 8e3                             ! [m]          Width of the band around the grounding line that should get this resolution
+    ROI_calving_front_width_config               = 8e3                             ! [m]          Width of the band around the calving front that should get this resolution
+    ROI_ice_front_width_config                   = 8e3                             ! [m]          Width of the band around the ice front that should get this resolution
+    ROI_coastline_width_config                   = 8e3                             ! [m]          Width of the band around the coastline that should get this resolution
 
     ! Miscellaneous refinement options
-    do_refine_TransAntMounts_glaciers_config     = .true.                          !              Whether or not to refine the mesh over the Transantarctic Mountains glaciers (resolving those really helps in getting a stable Ross ice shelf)
+    do_refine_TransAntMounts_glaciers_config     = .false.                          !              Whether or not to refine the mesh over the Transantarctic Mountains glaciers (resolving those really helps in getting a stable Ross ice shelf)
     max_res_TransAntMounts_glaciers_config       = 4e3                              ! [m]          Maximum resolution for the Transantarctic Mountains glaciers
 
     ! Mesh update settings
-    allow_mesh_updates_config                    = .TRUE.                          ! [-]          Whether or not mesh updates are allowed
+    allow_mesh_updates_config                    = .FALSE.                          ! [-]          Whether or not mesh updates are allowed
     dt_mesh_update_min_config                    = 100.0                           ! [yr]         Minimum amount of time between mesh updates
     minimum_mesh_fitness_coefficient_config      = 0.95                             ! [-]          If the mesh fitness coefficient drops below this threshold, trigger a mesh update
     do_out_of_time_calving_front_relax_config    = .TRUE.                           !              Whether or not to step out of time and relax the calving front for a few iterations after a mesh update
@@ -333,8 +333,8 @@
   ! ===================================
 
     ! Target dHi_dt
-    do_target_dHi_dt_config                      = .TRUE.                           ! Whether or not to use a target dHi_dt field from an external file to alter the modelled one
-    do_limit_target_dHi_dt_to_SMB_config         = .TRUE.                           ! Whether or not to limit a target dHi_dt field to available SMB in that area, so it does not melt all ice there
+    do_target_dHi_dt_config                      = .FALSE.                           ! Whether or not to use a target dHi_dt field from an external file to alter the modelled one
+    do_limit_target_dHi_dt_to_SMB_config         = .FALSE.                           ! Whether or not to limit a target dHi_dt field to available SMB in that area, so it does not melt all ice there
     target_dHi_dt_t_end_config                   = 9.9e9                            ! End time of target dHi_dt application
 
     ! Files containing a target dHi_dt for inversions
@@ -412,7 +412,7 @@
     protect_grounded_mask_t_end_config           = 20000.0                          ! End time of grounded mask protection. After this time, it will be allowed to thin and become afloat
 
     ! Fix/delay ice thickness evolution
-    do_fixiness_before_start_config              = .TRUE.                           ! Whether or not to apply fixiness values before fixiness_t_start
+    do_fixiness_before_start_config              = .FALSE.                           ! Whether or not to apply fixiness values before fixiness_t_start
     fixiness_t_start_config                      = -9.9E9                           ! Start time of linear transition between fixed/delayed and free evolution
     fixiness_t_end_config                        = -8.8E8                           ! End   time of linear transition between fixed/delayed and free evolution
     fixiness_H_gl_gr_config                      = 0.0                              ! Fix (1), release (0), or delay grounded ice geometry evolution
@@ -423,7 +423,7 @@
     fixiness_H_freeocean_config                  = .FALSE.                          ! Fix (.TRUE.) ice-free vertices between fixiness_t_start and fixiness_t_end
 
     ! Limit ice thickness evolution
-    do_limitness_before_start_config             = .TRUE.                           ! Whether or not to apply limitness values before limitness_t_start
+    do_limitness_before_start_config             = .FALSE.                           ! Whether or not to apply limitness values before limitness_t_start
     limitness_t_start_config                     = -9.9E9                           ! Start time of linear transition between limited and free evolution
     limitness_t_end_config                       = -8.8E8                           ! End   time of linear transition between limited and free evolution
     limitness_H_gl_gr_config                     = +9.9E9                           ! Maximum departure from PD ice thickness allowed at peak limitness
@@ -444,7 +444,7 @@
   ! == Bed roughness
   ! ================
 
-    choice_bed_roughness_config                  = 'read_from_file'                 ! Choice of source for friction coefficients: "uniform", "parameterised", "read_from_file"
+    choice_bed_roughness_config                  = 'uniform'                 ! Choice of source for friction coefficients: "uniform", "parameterised", "read_from_file"
     choice_bed_roughness_parameterised_config    = 'Martin2011'                     ! "Martin2011", "SSA_icestream", "MISMIP+", "BIVMIP_A", "BIVMIP_B", "BIVMIP_C"
     ! Paths to files containing bed roughness fields for the chosen sliding law
     filename_bed_roughness_NAM_config            = ''
@@ -464,7 +464,7 @@
     slid_Tsai2015_beta_sq_uniform_config         = 1.0E4                            ! Uniform value for beta_sq  in the Tsai2015 sliding law
     slid_Schoof2005_alpha_sq_uniform_config      = 0.5                              ! Uniform value for alpha_sq in the Schoof2005 sliding law
     slid_Schoof2005_beta_sq_uniform_config       = 1.0E4                            ! Uniform value for beta_sq  in the Schoof2005 sliding law
-    slid_ZI_phi_fric_uniform_config              = 45.0                             ! Uniform value for phi_fric in the Zoet-Iverson sliding law
+    slid_ZI_phi_fric_uniform_config              = 30.0                             ! Uniform value for phi_fric in the Zoet-Iverson sliding law
     ! Parameters for bed roughness parameterisations
     Martin2011till_phi_Hb_min_config             = -500.0                           ! Martin et al. (2011) bed roughness parameterisation: low-end  Hb  value of bedrock-dependent till friction angle
     Martin2011till_phi_Hb_max_config             = 0.0                              ! Martin et al. (2011) bed roughness parameterisation: high-end Hb  value of bedrock-dependent till friction angle
@@ -480,7 +480,7 @@
     choice_inversion_target_geometry_config      = 'init'                             !           Which reference geometry to use as the target geometry (can be "init" or "PD")
     bed_roughness_nudging_dt_config              = 5.0                              ! [yr]      Time step for bed roughness updates
     bed_roughness_nudging_t_start_config         = -9.9E9                           ! [yr]      Earliest model time when nudging is allowed
-    bed_roughness_nudging_t_end_config           = +9.9E9                           ! [yr]      Latest   model time when nudging is allowed
+    bed_roughness_nudging_t_end_config           = 40000.0                           ! [yr]      Latest   model time when nudging is allowed
 
     ! Basal inversion model based on flowline-averaged values of H and dH/dt
     bednudge_H_dHdt_flowline_t_scale_config      = 150.0                            ! [yr]      Timescale
@@ -603,7 +603,7 @@
     filename_ocean_snapshot_NAM_config           = ''
     filename_ocean_snapshot_EAS_config           = ''
     filename_ocean_snapshot_GRL_config           = ''
-    filename_ocean_snapshot_ANT_config           = '/home/x_frare/data/ocean/woa18_decav_ts00_04_remapcon_r360x180_NaN.nc'
+    filename_ocean_snapshot_ANT_config           = '/home/x_frare/data/ocean/Jourdain2020_ocean.nc'
 
   ! == Surface mass balance
   ! =======================
