fix calving file

--- a/config-files_tetralith/config_tetralith_PD_retreat_mask_calving.cfg
+++ b/config-files_tetralith/config_tetralith_PD_retreat_mask_calving.cfg
@@ -400,7 +400,7 @@
     continental_shelf_min_height_config          = -1500.0                          ! Maximum depth of the continental shelf
 
     do_use_ISMIP_future_shelf_collapse_forcing_config   = .TRUE.                    ! If set to TRUE, the calving front is forced to retreat according to the ISMIP future calving front collapse scenario
-    shelf_collapse_type_config                          = 'BMB'                 ! Type of calving collapse to aplly: 'BMB' or 'calving'
+    shelf_collapse_type_config                          = 'calving'                 ! Type of calving collapse to aplly: 'BMB' or 'calving'
     ISMIP_future_shelf_collapse_forcing_filename_config = '/home/x_frare/data/retreat_masks/mask_iceshelf_calving.nc' ! Path to a file containing the calving front retreat forcing mask for Antarctica
 
   ! == Ice dynamics - stabilisation
