modify config file

--- a/config-files_tetralith/config_tetralith_PD_inversion_dHdt_init_ROI_gamma20_PMP_roughness_max20_calvingfix.cfg
+++ b/config-files_tetralith/config_tetralith_PD_inversion_dHdt_init_ROI_gamma20_PMP_roughness_max20_calvingfix.cfg
@@ -392,9 +392,14 @@
     calving_threshold_thickness_sheet_config     = 0.0                              ! Threshold ice thickness for ice sheet calving front in the "threshold_thickness" calving law
     max_calving_rounds_config                    = 20                               ! Maximum number of calving loops during chain reaction
     do_remove_shelves_config                     = .FALSE.                          ! If set to TRUE, all floating ice is always instantly removed (used in the ABUMIP-ABUK experiment)
-    remove_shelves_larger_than_PD_config         = .TRUE.                          ! If set to TRUE, all floating ice beyond the present-day calving front is removed (used for some Antarctic spin-ups)
+    remove_shelves_larger_than_PD_config         = .FALSE.                          ! If set to TRUE, all floating ice beyond the present-day calving front is removed (used for some Antarctic spin-ups)
     continental_shelf_calving_config             = .FALSE.                          ! If set to TRUE, all ice beyond the continental shelf edge (set by a maximum depth) is removed
     continental_shelf_min_height_config          = -1500.0                          ! Maximum depth of the continental shelf
+
+    do_use_ISMIP_future_shelf_collapse_forcing_config   = .true.                    ! If set to TRUE, the calving front is forced to retreat according to the ISMIP future calving front collapse scenario
+    shelf_collapse_type_config                          = 'calving'                 ! Type of calving collapse to aplly: 'BMB' or 'calving'
+    ISMIP_future_shelf_collapse_forcing_filename_config = '/home/x_frare/data/retreat_masks/mask_ocean_calving.nc' ! Path to a file containing the calving front retreat forcing mask for Antarctica
+    retreat_mask_without_time_config                    = .true.                    ! If set to TRUE, the retreat mask is not time-dependent and is applied throughout the entire simulation
 
   ! == Ice dynamics - stabilisation
   ! ===============================
